k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: demo-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: demo
  template:
    metadata:
      labels:
       app: demo
    spec:
      containers:
      - name: demo-container
        image: pierpaolog98/demo-image:latest
        ports:
          - containerPort: 8080
